syntax = "proto3";
package nilchain.nilchain.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "nilchain/nilchain/v1/params.proto";
import "nilchain/nilchain/v1/proof.proto";

option go_package = "nilchain/x/nilchain/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/nilchain/nilchain/v1/params";
  }

  // Queries a list of Proof items.
  rpc ListProofs(QueryListProofsRequest) returns (QueryListProofsResponse) {
    option (google.api.http).get = "/nilchain/nilchain/v1/proofs";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryListProofsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListProofsResponse {
  repeated Proof proof = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}